--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,53 @@
--i https://pypi.org/simple
 backcall==0.1.0
+bleach==3.0.2
 decorator==4.3.0
+defusedxml==0.5.0
+Django==2.1.2
 django-appconf==1.0.2
 django-countries==5.3.2
 django-extensions==2.1.3
 django-measurement==3.1.1
-django==2.1.2
-ipython-genutils==0.2.0
+entrypoints==0.2.3
+ipykernel==5.1.0
 ipython==7.1.1
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
 jedi==0.13.1
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+MarkupSafe==1.1.0
 measurement==2.0.1
+mistune==0.8.4
 mpmath==1.0.0
+nbconvert==5.4.0
+nbformat==4.4.0
+notebook==5.7.0
 numpy==1.15.3
+pandas==0.23.4
+pandocfilters==1.4.2
 parso==0.3.1
-pexpect==4.6.0 ; sys_platform != 'win32'
+pexpect==4.6.0
 pickleshare==0.7.5
+prometheus-client==0.4.2
 prompt-toolkit==2.0.6
+psycopg2==2.7.6.1
 ptyprocess==0.6.0
-pygments==2.2.0
+Pygments==2.2.0
+python-dateutil==2.7.5
 pytz==2018.6
+pyzmq==17.1.2
+qtconsole==4.4.3
+Send2Trash==1.5.0
 six==1.11.0
 sympy==1.3
+terminado==0.8.1
+testpath==0.4.2
+tornado==5.1.1
 traitlets==4.3.2
 wcwidth==0.1.7
-wheel==0.32.2
+webencodings==0.5.1
+widgetsnbextension==3.4.2
